packages/isar_plus/test/errors/property/unsupported_type.dart
// unsupported type

import 'package:isar_plus/isar_plus.dart';

@collection
class Model {
  late int id;

  late Set<String>? prop;
}
